# small_IPC_QLocalServer

./: .gitignore  CMakeLists.txt
IPCInterface/: CMakeLists.txt  config.h.in
IPCInterface/include/: IpcEndpoint.hpp  circularQueue.hpp  clientInterface.hpp  clientProxy.hpp  global.hpp  ipcMessage.hpp  serverInterface.hpp  serverInternal.hpp  utility.hpp
IPCInterface/src/: circularQueue.hpp  clientInterface.cpp  clientInternal.cpp  clientInternal.hpp  clientProxy.cpp  clientProxy.hpp  serverInterface.cpp  serverInternal.cpp  serverInternal.hpp  serverProxy.cpp  serverProxy.hpp  utility.hpp
app/: CMakeLists.txt
app/src/: client.cpp  main.cpp  server.cpp
demo/: CMakeLists.txt
demo/src/: client.cpp  server.cpp
include/IPCInterface/: clientInterface.hpp  ipcExport.hpp  ipcMessage.hpp  serverInterface.hpp
src/: CMakeLists.txt
src/IPCInterface/: clientInternal.cpp  clientInternal.hpp  clientProxy.cpp  clientProxy.hpp  config.h  ipcMessage.cpp  serverInternal.cpp  serverInternal.hpp  serverProxy.cpp  serverProxy.hpp
